2017-10-30  Wilco Dijkstra  <wdijkstr@arm.com>

	* config/arm/arm.md (ashldi3): Remove shift by 1 expansion.
	(arm_ashldi3_1bit): Remove pattern.
	(ashrdi3): Remove shift by 1 expansion.
	(arm_ashrdi3_1bit): Remove pattern.
	(lshrdi3): Remove shift by 1 expansion.
	(arm_lshrdi3_1bit): Remove pattern.
	* config/arm/arm.c (arm_rtx_costs_internal): Slightly increase
	cost of ashldi3 by 1.
	* config/arm/neon.md (ashldi3_neon): Remove shift by 1 expansion.
	(<shift>di3_neon): Likewise.

2017-10-30  Dominik Infuehr  <dominik.infuehr@theobroma-systems.com>

	* config/aarch64/aarch64-simd.md (*aarch64_simd_mov): Rename
	both identically named patterns to (*aarch64_simd_mov<VD:mode>)
	and (*aarch64_simd_mov<VQ:mode>).
	(*aarch64_simd_mov<VD:mode>): Change type attribute to match
	pattern alternative.
	(*aarch64_simd_mov<VQ:mode>): Re-order and change type
	attributes to match pattern alternative.

2017-10-30  Steven Munroe  <munroesj@gcc.gnu.org>

	* config.gcc (powerpc*-*-*): Add emmintrin.h.
	* config/rs6000/emmintrin.h: New file.
	* config/rs6000/x86intrin.h [__ALTIVEC__]: Include emmintrin.h.

2017-10-30  Wilco Dijkstra  <wdijkstr@arm.com>

	* config/arm/vfp.md (movdi_vfp): Merge changes from movdi_vfp_cortexa8.
	* (movdi_vfp_cortexa8): Remove pattern.

2017-10-30  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/install.texi (Specific, alpha*-*-*): Remove DEC OSF/1
	etc. reference.
	(Specific, alpha*-dec-osf5.1): Remove.
	(Specific, mips-sgi-irix5): Remove.
	(Specific, mips-sgi-irix6): Remove.

2017-10-30  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/22141
	* gimple-ssa-store-merging.c (merged_store_group::apply_stores): Fix
	arguments to clear_bit_region_be.

2017-10-30  Jim Wilson  <wilson@tuliptree.org>

	* gimplify.c: Include memmodel.h.

2017-10-30  Martin Jambor  <mjambor@suse.cz>

	* omp-grid.c (grid_attempt_target_gridification): Also insert a
	condition whether loop should be executed at all.

2017-10-30  Will Schmidt  <will_schmidt@vnet.ibm.com>
